# MagicCamera3

./: .gitignore  PRIVACY_POLICY_CN.md  README.md  build.gradle  gradle.properties  settings.gradle  词意政策.txt
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: amaro.glsl  antique.glsl  blackcat.glsl  brannan.glsl  brooklyn.glsl  calm.glsl  camera.frag  camera.vert  common_f.glsl  cool.glsl  crayon.glsl  default_fragment.glsl  default_none_fragment.glsl  earlybird.glsl  emerald.glsl  evergreen.glsl  freud.glsl  glitch_f.glsl  healthy.glsl  hefe.glsl  hudson.glsl  inkwell.glsl  kevin_new.glsl  latte.glsl  lomo.glsl  lookup.glsl  n1977.glsl  nashville.glsl  nofilter_f.glsl  nofilter_v.glsl  none.glsl  nostalgia.glsl  pixar.glsl  rise.glsl  romance.glsl  sakura.glsl  shakeeffect_f.glsl  sierra.glsl  sketch.glsl  skinwhiten.glsl  (+16 more)
app/src/main/cpp/: MagicJni.cpp  gpuimagefilter.cpp  gpuimagefilter.h  magicjni.cpp  triangle.cpp
app/src/main/cpp/bitmap/: JniBitmap.h
app/src/main/cpp/camera/: CameraEngine.cpp  CameraEngine.h  CameraFilter.cpp  CameraFilter.h  EGLCore.cpp  EGLCore.h  GLBase.h
app/src/main/cpp/egl/: EGLCore.cpp  EGLCore.h
app/src/main/cpp/filter/: MagicFilterFactory.cpp  MagicFilterFactory.h
app/src/main/cpp/filter/advanced/: MagicAmaroFilter.cpp  MagicAmaroFilter.h  MagicAntiqueFilter.cpp  MagicAntiqueFilter.h  MagicBeautyFilter.cpp  MagicBeautyFilter.h  MagicBlackCatFilter.cpp  MagicBlackCatFilter.h  MagicBrannanFilter.cpp  MagicBrannanFilter.h  MagicBrooklynFilter.cpp  MagicBrooklynFilter.h  MagicCalmFilter.cpp  MagicCalmFilter.h  MagicCoolFilter.cpp  MagicCoolFilter.h  MagicCrayonFilter.cpp  MagicCrayonFilter.h  MagicEarlyBirdFilter.cpp  MagicEarlyBirdFilter.h  MagicEmeraldFilter.cpp  MagicEmeraldFilter.h  MagicEvergreenFilter.cpp  MagicEvergreenFilter.h  MagicFairytableFilter.cpp  MagicFairytableFilter.h  MagicFreudFilter.cpp  MagicFreudFilter.h  MagicHealthyFilter.cpp  MagicHealthyFilter.h  MagicHefeFilter.cpp  MagicHefeFilter.h  MagicHudsonFilter.cpp  MagicHudsonFilter.h  MagicInkwellFilter.cpp  MagicInkwellFilter.h  MagicKevinFilter.cpp  MagicKevinFilter.h  MagicLatteFilter.cpp  MagicLatteFilter.h  (+48 more)
app/src/main/cpp/filter/douyin/: MagicGlitchFilter.cpp  MagicGlitchFilter.h  MagicScaleFilter.cpp  MagicScaleFilter.h  MagicShakeEffectFilter.cpp  MagicShakeEffectFilter.h  MagicShineWhiteFilter.cpp  (+10 more)
app/src/main/cpp/image/: ImageFilter.cpp  ImageFilter.h  ImageInput.cpp  ImageInput.h
app/src/main/cpp/utils/: MagicThreadPool.h  Matrix.cpp  Matrix.h  OpenglUtils.cpp  OpenglUtils.h  Rotation.cpp  Rotation.h  StringUtil.cpp  TextureRoationUtil.h  TextureRotationUtil.cpp  TextureRotationUtil.h  openglutils.cpp  openglutils.h  rotation.cpp  rotation.h  stb_image.c  stb_image.h  textureroationutil.h  texturerotationutil.cpp
app/src/main/cpp/video/: VideoFilter.cpp  VideoFilter.h
app/src/main/res/drawable/: video_record_seekbar_thumb_transparent.xml  video_record_seekbar_transparent.xml
app/src/main/res/layout/: activity_album.xml  activity_album_texture.xml  activity_camera.xml  activity_camera_sample.xml  activity_main.xml  activity_show.xml  filter_layout.xml
app/src/main/res/raw/: no_filter_fragment_shader.glsl  no_filter_vertex_shader.glsl
app/src/main/res/values/: feature_names.xml  strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
filter/: CMakeLists.txt  build.gradle
filter/src/main/: AndroidManifest.xml
filter/src/main/assets/: antique.glsl  blackcat.glsl  brannan.glsl  cool.glsl  crayon.glsl  default_vertex.glsl  earlybird.glsl  freud.glsl  glitch_f.glsl  hudson.glsl  inkwell.glsl  kevin_new.glsl  latte.glsl  lomo.glsl  lookup.glsl  n1977.glsl  none.glsl  nostalgia.glsl  romance.glsl  shakeeffect_f.glsl  sketch.glsl  skinwhiten.glsl  soulout_v.glsl  sunrise.glsl  sunset.glsl  sweets.glsl  three_win.glsl  verigo_f2.glsl  walden.glsl  whiteshine_f.glsl  xproii_filter_shader.glsl
filter/src/main/cpp/: GPUImagexJNI.cpp  magicjni.cpp  native-lib.cpp  triangle.cpp
filter/src/main/cpp/Android/: magicjni.cpp
filter/src/main/cpp/Common/: Platform.h
filter/src/main/cpp/bitmap/: BitmapOperation.cpp
filter/src/main/cpp/camera/: CameraEngine.cpp  CameraEngine.h  CameraFilter.cpp  CameraFilter.h
filter/src/main/cpp/effect/: BeautifyFilter.cpp  BeautifyFilter.hpp  BilateralFilter.cpp  BilateralFilter.hpp  BrightnessFilter.cpp  BrightnessFilter.hpp  CannyEdgeDetectionFilter.cpp  CannyEdgeDetectionFilter.hpp  ColorInvertFilter.cpp  ColorInvertFilter.hpp  ColorMatrixFilter.cpp  ColorMatrixFilter.hpp  ContrastFilter.cpp  ContrastFilter.hpp  Convolution3x3Filter.cpp  Convolution3x3Filter.hpp  CrosshatchFilter.cpp  CrosshatchFilter.hpp  DirectionalNonMaximumSuppressionFilter.cpp  DirectionalNonMaximumSuppressionFilter.hpp  DirectionalSobelEdgeDetectionFilter.cpp  DirectionalSobelEdgeDetectionFilter.hpp  EmbossFilter.cpp  EmbossFilter.hpp  ExposureFilter.cpp  ExposureFilter.hpp  Filter.cpp  Filter.hpp  FilterGroup.cpp  FilterGroup.hpp  GaussianBlurFilter.hpp  GaussianBlurMonoFilter.cpp  GaussianBlurMonoFilter.hpp  GlassSphereFilter.cpp  GlassSphereFilter.hpp  GrayscaleFilter.cpp  GrayscaleFilter.hpp  HSBFilter.cpp  HSBFilter.hpp  HalftoneFilter.cpp  (+39 more)
filter/src/main/cpp/egl/: EGLCore.cpp  EGLCore.h  GLBase.h
filter/src/main/cpp/filter/: MagicFilterFactory.cpp  MagicFilterFactory.h
filter/src/main/cpp/image/: ImageFilter.cpp  ImageFilter.h  ImageInput.cpp  ImageInput.h
filter/src/main/cpp/source/: Context.cpp  Context.hpp  Framebuffer.cpp  Framebuffer.hpp  FramebufferCache.cpp  FramebufferCache.hpp  GLProgram.cpp  GLProgram.hpp  GPUImage-x.h  GPUImagexJNI.cpp  Ref.cpp  Ref.hpp  Source.cpp  Source.hpp  SourceCamera.cpp  SourceImage.cpp  Target.cpp  Target.hpp  TargetView.cpp  TargetView.h  macros.h  macros.hpp  math.cpp  math.hpp  util.cpp  util.h
filter/src/main/cpp/utils/: MagicThreadPool.h  Matrix.h  OpenglUtils.cpp  OpenglUtils.h  Rotation.cpp  StringUtil.cpp  StringUtil.h
filter/src/main/cpp/video/: VideoFilter.cpp  VideoFilter.h
filter/src/main/res/values/: strings.xml
(+286 files in other folders)
